2023-02-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCloop.c,
	  support/regression/tests/bug-3560.c:
	  Fix bug #3560.

2023-02-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/_minimal.c:
	  Pick minimal regression test from MP8 fork of sdcc to ease initial debugging of new ports.

2023-02-20 Felix Salfelder <felix AT salfelder.org>

	* Makefile.in:
	  fix literal sdcc-sdbinutils dep, towards fixing bug #3491.

2023-02-17 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/libcpp/files.cc:
	  Remove stray assert, fix bug #3483.

2023-02-16 Felix Salfelder <felix AT salfelder.org>

	* src/clean.mk: Delete Makefile target only.

2023-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.h,
	  src/SDCCerr.c: changed possible to probable
	* src/SDCCast.c,
	  doc/sdccman.lyx: fixed spelling

2023-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix bug #3382.
	* support/regression/tests/*.c,
	  src/*:
	  Spelling fixes for comments, from patch #459 by Konstantin Kim.

2023-02-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-2776.c,
	  support/regression/tests/bug-3368.c:
	  Fix bugs #2776, #3378.

2023-02-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-3352.c:
	  Fix bug #3352.
	* device/lib/sm83/crt0.s:
	  Fix bug #3548.
	* support/regression/tests/gcc-torture-execute-pr91137.c:
	  Fix bug #3549.
	* support/regression/tests/bug1723128.c:
	  Fix bug #3550.

2023-02-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3547.c:
	  Fix bug #3547.

2023-02-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.y:
	  Warn on deprecated _sdcc_external_startup, RFE #868.
	* device/lib/printf_large.c,
	  .version,
	  doc/sdccman.lyx,
	  support/regression/tests/snprintf.c.in: